syntax = "proto3";
package fitglue;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/fitglue/server/src/go/pkg/types/pb";

message WaitlistEntry {
  string email = 1;
  string source = 2; // e.g. "web"
  google.protobuf.Timestamp created_at = 3;
  string user_agent = 4;
  string ip = 5;
}
